--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.14.7",
     "autoprefixer": "^10.2.6",
     "browser-sync": "^2.27.4",
+    "cheerio": "^1.0.0-rc.10",
     "cssnano": "^5.0.6",
     "del": "^6.0.0",
     "eslint": "^7.29.0",
@@ -31,6 +32,7 @@
     "gulp-replace": "^1.1.3",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
+    "js-yaml": "^4.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.1.4",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -40,7 +42,7 @@
     "node": "10"
   },
   "browserslist": [
-      "defaults and supports wasm"
-    ],
+    "defaults and supports wasm"
+  ],
   "dependencies": {}
 }
