--- a/src/yaml/food.yaml
+++ b/src/yaml/food.yaml
@@ -1,54 +1,63 @@
 - SECTION: 'Power Food'
 
-  Plate of Jerk Poultry:
+  jerk-poultry:
+    text: 'Plate of Jerk Poultry'
     modifiers:
       flat: {'Power': 150}
     armory-embed: 'items'
     armory-id: 71797
 
-  Plate of Truffle Steak:
+  truffle-steak:
+    text: 'Plate of Truffle Steak'
     modifiers:
       flat: {'Power': 100, 'Precision': 70}
     armory-embed: 'items'
     armory-id: 12467
 
-  Bowl of Sweet and Spicy Butternut Squash Soup:
+  sweet-and-spicy-butternut-squash-soup:
+    text: 'Bowl of Sweet and Spicy Butternut Squash Soup'
     modifiers:
       flat: {'Power': 100, 'Ferocity': 70}
     armory-embed: 'items'
     armory-id: 41569
 
-  Plate of Roasted Cactus:
+  roasted-cactus:
+    text: 'Plate of Roasted Cactus'
     modifiers:
       flat: {'Ferocity': 100}
     armory-embed: 'items'
     armory-id: 66536
 
-  Bowl of Sawgill Mushroom Risotto:
+  sawgill-mushroom-risotto:
+    text: 'Bowl of Sawgill Mushroom Risotto'
     modifiers:
       flat: {'Precision': 150}
     armory-embed: 'items'
     armory-id: 75010
 
-  Bowl of Curry Butternut Squash Soup:
+  curry-butternut-squash-soup:
+    text: 'Bowl of Curry Butternut Squash Soup'
     modifiers:
       flat: {'Precision': 100, 'Ferocity': 70}
     armory-embed: 'items'
     armory-id: 12486
 
-  Bowl of Seaweed Salad <small class="text-muted font-italic">(90% uptime) </small>:
+  seaweed-salad-<small-class="text-muted-font-italic"(90%-uptime)-</small>:
+    text: 'Bowl of Seaweed Salad <small class="text-muted font-italic">(90% uptime) </small>'
     modifiers:
       multiplier: {'Effective Power': 0.045}
     armory-embed: 'items'
     armory-id: 12471
 
-  Dragon's Breath Bun <small class="text-muted font-italic">(100% uptime) </small>:
+  dragon's-breath-bun-<small-class="text-muted-font-italic"(100%-uptime)-</small>:
+    text: 'Dragon''s Breath Bun <small class="text-muted font-italic">(100% uptime) </small>'
     modifiers:
       flat: {'Power': 200, 'Ferocity': 70}
     armory-embed: 'items'
     armory-id: 43360
 
-  Steamed Red Dumpling <small class="text-muted font-italic">(100% uptime) </small>:
+  steamed-red-dumpling-<small-class="text-muted-font-italic"(100%-uptime)-</small>:
+    text: 'Steamed Red Dumpling <small class="text-muted font-italic">(100% uptime) </small>'
     modifiers:
       flat: {'Power': 200, 'Condition Damage': 140}
     armory-embed: 'items'
@@ -56,43 +65,50 @@
 
 - SECTION: 'Support Food'
 
-  Bowl of Poultry Satay:
+  poultry-satay:
+    text: 'Bowl of Poultry Satay'
     modifiers:
       flat: {'Healing Power': 100, 'Concentration': 70}
     armory-embed: 'items'
     armory-id: 87076
 
-  Creme Brulee:
+  creme-brulee:
+    text: 'Creme Brulee'
     modifiers:
       flat: {'Concentration': 100, 'Healing Power': 70}
     armory-embed: 'items'
     armory-id: 91746
 
-  Plate of Eggs Benedict:
+  eggs-benedict:
+    text: 'Plate of Eggs Benedict'
     modifiers:
       flat: {'Concentration': 100, 'Expertise': 70}
     armory-embed: 'items'
     armory-id: 91842
 
-  Soul Pastry:
+  soul-pastry:
+    text: 'Soul Pastry'
     modifiers:
       flat: {'Concentration': 100, 'Power': 70}
     armory-embed: 'items'
     armory-id: 89002
 
-  Fried Golden Dumpling:
+  fried-golden-dumpling:
+    text: 'Fried Golden Dumpling'
     modifiers:
       flat: {'Concentration': 100}
     armory-embed: 'items'
     armory-id: 68633
 
-  Bowl of Nopalitos Sauté:
+  nopalitos-sauté:
+    text: 'Bowl of Nopalitos Sauté'
     modifiers:
       flat: {'Concentration': 100, 'Toughness': 70}
     armory-embed: 'items'
     armory-id: 66530
 
-  Plate of Mussels Gnashblade:
+  mussels-gnashblade:
+    text: 'Plate of Mussels Gnashblade'
     modifiers:
       flat: {'Concentration': 70}
       multiplier: {'Effective Health': 0.1}
@@ -101,7 +117,8 @@
 
 - SECTION: 'Heal Food'
 
-  Delicious Rice Ball:
+  delicious-rice-ball:
+    text: 'Delicious Rice Ball'
     modifiers:
       flat: {'Healing Power': 100}
       multiplier: {'Effective Healing': 0.1}
@@ -110,37 +127,43 @@
 
 - SECTION: 'Condition Food'
 
-  Rare Veggie Pizza:
+  rare-veggie-pizza:
+    text: 'Rare Veggie Pizza'
     modifiers:
       flat: {'Expertise': 100, 'Condition Damage': 70}
     armory-embed: 'items'
     armory-id: 12464
 
-  Saffron Stuffed Mushroom (100% uptime):
+  saffron-stuffed-mushroom-(100%-uptime):
+    text: 'Saffron Stuffed Mushroom (100% uptime)'
     modifiers:
       flat: {'Precision': 70, 'Condition Damage': 200}
     armory-embed: 'items'
     armory-id: 12476
 
-  Plate of Beef Rendang:
+  beef-rendang:
+    text: 'Plate of Beef Rendang'
     modifiers:
       flat: {'Condition Damage': 100, 'Expertise': 70}
     armory-embed: 'items'
     armory-id: 86997
 
-  Prickly Pear Pie:
+  prickly-pear-pie:
+    text: 'Prickly Pear Pie'
     modifiers:
       flat: {'Expertise': 100}
     armory-embed: 'items'
     armory-id: 66538
 
-  Fancy Truffle Burger:
+  fancy-truffle-burger:
+    text: 'Fancy Truffle Burger'
     modifiers:
       flat: {'Poison Duration': 15, 'Precision': 70}
     armory-embed: 'items'
     armory-id: 12463
 
-  Bowl of Fire Meat Chili:
+  fire-meat-chili:
+    text: 'Bowl of Fire Meat Chili'
     modifiers:
       flat: {'Burning Duration': 15, 'Precision': 70}
     armory-embed: 'items'
@@ -148,61 +171,71 @@
 
 - SECTION: 'Hybrid Food'
 
-  Spicy Marinated Mushroom:
+  spicy-marinated-mushroom:
+    text: 'Spicy Marinated Mushroom'
     modifiers:
       flat: {'Power': 100, 'Toughness': 70}
     armory-embed: 'items'
     armory-id: 41563
 
-  Plate of Spicy Herbed Chicken:
+  spicy-herbed-chicken:
+    text: 'Plate of Spicy Herbed Chicken'
     modifiers:
       flat: {'Power': 70, 'Toughness': 100}
     armory-embed: 'items'
     armory-id: 41567
 
-  Bowl of Truffle Ravioli:
+  truffle-ravioli:
+    text: 'Bowl of Truffle Ravioli'
     modifiers:
       flat: {'Precision': 70, 'Toughness': 100}
     armory-embed: 'items'
     armory-id: 12461
 
-  Dragon's Revelry Starcake:
+  dragon's-revelry-starcake:
+    text: 'Dragon''s Revelry Starcake'
     modifiers:
       flat: {'Power': 45, 'Precision': 45, 'Toughness': 45, 'Vitality': 45, 'Concentration': 45, 'Condition Damage': 45, 'Expertise': 45, 'Ferocity': 45, 'Healing Power': 45}
     armory-embed: 'items'
     armory-id: 43550
 
-  Red Lentil and Flatbread Feast:
+  red-lentil-and-flatbread-feast:
+    text: 'Red Lentil and Flatbread Feast'
     modifiers:
       flat: {'Power': 45, 'Precision': 45, 'Toughness': 45, 'Vitality': 45, 'Concentration': 45, 'Condition Damage': 45, 'Expertise': 45, 'Ferocity': 45, 'Healing Power': 45}
     armory-embed: 'items'
     armory-id: 82657
 
-  Plate of Fire Flank Steak:
+  fire-flank-steak:
+    text: 'Plate of Fire Flank Steak'
     modifiers:
       flat: {'Power': 100, 'Condition Damage': 70}
     armory-embed: 'items'
     armory-id: 12466
 
-  Bowl of Fancy Potato and Leek Soup:
+  fancy-potato-and-leek-soup:
+    text: 'Bowl of Fancy Potato and Leek Soup'
     modifiers:
       flat: {'Precision': 100, 'Condition Damage': 70}
     armory-embed: 'items'
     armory-id: 12485
 
-  Bowl of Sweet and Spicy Beans:
+  sweet-and-spicy-beans:
+    text: 'Bowl of Sweet and Spicy Beans'
     modifiers:
       flat: {'Expertise': 100, 'Power': 70}
     armory-embed: 'items'
     armory-id: 66528
 
-  Bowl of Truffle Risotto:
+  truffle-risotto:
+    text: 'Bowl of Truffle Risotto'
     modifiers:
       flat: {'Condition Damage': 100, 'Precision': 70}
     armory-embed: 'items'
     armory-id: 12465
 
-  Birthday Blaster:
+  birthday-blaster:
+    text: 'Birthday Blaster'
     modifiers:
       flat: {'Power': 40, 'Precision': 40, 'Toughness': 40, 'Vitality': 40, 'Condition Damage': 40, 'Expertise': 40, 'Ferocity': 80, 'Healing Power': 40}
     armory-embed: 'items'
