--- a/src/yaml/runes.yaml
+++ b/src/yaml/runes.yaml
@@ -1,67 +1,77 @@
 - SECTION: 'Power Runes'
 
-  Superior Rune of the Scholar<br> <small>(with active bonus)</small>:
+  scholar<br-<small>(with-active-bonus)</small>:
+    text: 'Superior Rune of the Scholar<br> <small>(with active bonus)</small>'
     modifiers:
       flat: {'Power': 175, 'Ferocity': 225}
       multiplier: {'Effective Power': 0.05}
     armory-embed: 'items'
     armory-id: 24836
 
-  Superior Rune of the Scholar<br> <small>(without active bonus)</small>:
+  scholar<br-<small>(without-active-bonus)</small>:
+    text: 'Superior Rune of the Scholar<br> <small>(without active bonus)</small>'
     modifiers:
       flat: {'Power': 175, 'Ferocity': 225}
     armory-embed: 'items'
     armory-id: 24836
 
-  Superior Rune of the Spellbreaker:
+  spellbreaker:
+    text: 'Superior Rune of the Spellbreaker'
     modifiers:
       flat: {'Power': 175, 'Precision': 100}
       multiplier: {'Effective Power': 0.07}
     armory-embed: 'items'
     armory-id: 84749
 
-  Superior Rune of the Flame Legion:
+  flame-legion:
+    text: 'Superior Rune of the Flame Legion'
     modifiers:
       flat: {'Power': 175, 'Burning Duration': 50}
       multiplier: {'Effective Power': 0.07}
     armory-embed: 'items'
     armory-id: 24797
 
-  Superior Rune of Strength:
+  strength:
+    text: 'Superior Rune of Strength'
     modifiers:
       flat: {'Power': 175, 'Might Duration': 50}
       multiplier: {'Effective Power': 0.05}
     armory-embed: 'items'
     armory-id: 24714
 
-  Superior Rune of the Eagle:
+  eagle:
+    text: 'Superior Rune of the Eagle'
     modifiers:
       flat: {'Precision': 175, 'Ferocity': 225}
       multiplier: {'Effective Power': 0.05}
     armory-embed: 'items'
     armory-id: 24723
 
-  Superior Rune of Exuberance:
+  exuberance:
+    text: 'Superior Rune of Exuberance'
     modifiers:
       flat: {'Vitality': 175}
       convert: {'Healing Power': {'Vitality': 0.03}, 'Precision': {'Vitality': 0.05}, 'Power': {'Vitality': 0.07}}
     armory-embed: 'items'
     armory-id: 44951
 
-  Superior Rune of the Pack:
+  pack:
+    text: 'Superior Rune of the Pack'
     modifiers:
       flat: {'Power': 175, 'Boon Duration': 15, 'Precision': 125}
     armory-embed: 'items'
     armory-id: 24702
 
-  Superior Rune of the Ogre:
+  ogre:
+    text: 'Superior Rune of the Ogre'
     modifiers:
       flat: {'Power': 175, 'Ferocity': 100}
       multiplier: {'add: Effective Power': 0.04}
     armory-embed: 'items'
     armory-id: 24756
 
-  Superior Rune of the Thief:
+  thief:
+    text: 'Superior Rune of the Thief'
     modifiers:
       flat: {'Precision': 300, 'Condition Damage': 100}
       multiplier: {'Effective Power': 0.1}
@@ -70,75 +80,87 @@
 
 - SECTION: 'Support Runes'
 
-  Superior Rune of the Firebrand:
+  firebrand:
+    text: 'Superior Rune of the Firebrand'
     modifiers:
       flat: {'Condition Damage': 175, 'Boon Duration': 10, 'Quickness Duration': 30}
     armory-embed: 'items'
     armory-id: 83338
 
-  Superior Rune of Leadership:
+  leadership:
+    text: 'Superior Rune of Leadership'
     modifiers:
       flat: {'Power': 36, 'Precision': 36, 'Toughness': 36, 'Vitality': 36, 'Ferocity': 36, 'Condition Damage': 36, 'Healing Power': 36, 'Concentration': 36, 'Expertise': 36, 'Boon Duration': 25}
     armory-embed: 'items'
     armory-id: 70600
 
-  Superior Rune of Surging (5x) <br>&amp; <span data-armory-embed="items" data-armory-ids="24508" data-armory-size="24"></span> Ruby Orb (1x):
+  surging-(5x)-<br&amp;-<span-data-armory-embed="items"-data-armory-ids="24508"-data-armory-size="24"></span>-ruby-orb-(1x):
+    text: 'Superior Rune of Surging (5x) <br>&amp; <span data-armory-embed="items" data-armory-ids="24508" data-armory-size="24"></span> Ruby Orb (1x)'
     modifiers:
       flat: {'Power': 195, 'Precision': 14, 'Ferocity': 14, 'Boon Duration': 15}
     armory-embed: 'items'
     armory-id: 76813
 
-  Superior Rune of Durability:
+  durability:
+    text: 'Superior Rune of Durability'
     modifiers:
       flat: {'Toughness': 175, 'Boon Duration': 15}
       multiplier: {'Effective Health': 0.1}
     armory-embed: 'items'
     armory-id: 73653
 
-  Superior Rune of the Herald:
+  herald:
+    text: 'Superior Rune of the Herald'
     modifiers:
       flat: {'Toughness': 175, 'Boon Duration': 15}
     armory-embed: 'items'
     armory-id: 76100
 
-  Superior Rune of the Chronomancer:
+  chronomancer:
+    text: 'Superior Rune of the Chronomancer'
     modifiers:
       flat: {'Power': 175, 'Precision': 100}
     armory-embed: 'items'
     armory-id: 73399
 
-  Superior Rune of the Revenant:
+  revenant:
+    text: 'Superior Rune of the Revenant'
     modifiers:
       flat: {'Power': 78, 'Precision': 78, 'Toughness': 78, 'Vitality': 78, 'Condition Damage': 78, 'Ferocity': 78, 'Healing Power': 78}
     armory-embed: 'items'
     armory-id: 69370
 
-  Superior Rune of Surging:
+  surging:
+    text: 'Superior Rune of Surging'
     modifiers:
       flat: {'Power': 175, 'Boon Duration': 15}
     armory-embed: 'items'
     armory-id: 76813
 
-  Superior Rune of Divinity:
+  divinity:
+    text: 'Superior Rune of Divinity'
     modifiers:
       flat: {'Power': 78, 'Precision': 78, 'Toughness': 78, 'Vitality': 78, 'Ferocity': 78, 'Condition Damage': 78, 'Healing Power': 78}
       multiplier: {'Effective Health': 0.1}
     armory-embed: 'items'
     armory-id: 24732
 
-  Superior Rune of the Rebirth:
+  rebirth:
+    text: 'Superior Rune of the Rebirth'
     modifiers:
       flat: {'Healing Power': 300, 'Boon Duration': 15}
     armory-embed: 'items'
     armory-id: 84171
 
-  Superior Rune of Sanctuary:
+  sanctuary:
+    text: 'Superior Rune of Sanctuary'
     modifiers:
       flat: {'Vitality': 175, 'Boon Duration': 15}
     armory-embed: 'items'
     armory-id: 24857
 
-  Superior Rune of Radiance:
+  radiance:
+    text: 'Superior Rune of Radiance'
     modifiers:
       flat: {'Vitality': 175, 'Boon Duration': 25}
     armory-embed: 'items'
@@ -146,20 +168,23 @@
 
 - SECTION: 'Heal Runes'
 
-  Superior Rune of the Monk <small>(10x)</small>:
+  monk-<small(10x)</small>:
+    text: 'Superior Rune of the Monk <small>(10x)</small>'
     modifiers:
       flat: {'Healing Power': 175, 'Boon Duration': 15}
       multiplier: {'Effective Healing': 0.2}
     armory-embed: 'items'
     armory-id: 24842
 
-  Superior Rune of the Water:
+  water:
+    text: 'Superior Rune of the Water'
     modifiers:
       flat: {'Healing Power': 175, 'Boon Duration': 25}
     armory-embed: 'items'
     armory-id: 24839
 
-  Superior Rune of Altruism:
+  altruism:
+    text: 'Superior Rune of Altruism'
     modifiers:
       flat: {'Healing Power': 300, 'Boon Duration': 15}
     armory-embed: 'items'
@@ -167,109 +192,126 @@
 
 - SECTION: 'Condition Runes'
 
-  Superior Rune of the Berserker:
+  berserker:
+    text: 'Superior Rune of the Berserker'
     modifiers:
       flat: {'Condition Damage': 175, 'Power': 100}
       multiplier: {'add: Effective Power': 0.05, 'add: Effective Condition Damage': 0.05}
     armory-embed: 'items'
     armory-id: 71425
 
-  Superior Rune of the Renegade:
+  renegade:
+    text: 'Superior Rune of the Renegade'
     modifiers:
       flat: {'Condition Damage': 175, 'Ferocity': 100}
       multiplier: {'add: Effective Condition Damage': 0.07}
     armory-embed: 'items'
     armory-id: 83502
 
-  Superior Rune of the Baelfire:
+  baelfire:
+    text: 'Superior Rune of the Baelfire'
     modifiers:
       flat: {'Power': 175, 'Condition Duration': 10, 'Burning Duration': 30}
       convert: {'Expertise': {'Power': 0.07}}
     armory-embed: 'items'
     armory-id: 24854
 
-  Superior Rune of the Lich:
+  lich:
+    text: 'Superior Rune of the Lich'
     modifiers:
       flat: {'Vitality': 175, 'Condition Duration': 15}
       multiplier: {'add: Effective Condition Damage': 0.04}
     armory-embed: 'items'
     armory-id: 24688
 
-  Superior Rune of the Tempest:
+  tempest:
+    text: 'Superior Rune of the Tempest'
     modifiers:
       flat: {'Condition Duration': 25, 'Power': 36, 'Precision': 36, 'Toughness': 36, 'Vitality': 36, 'Ferocity': 36, 'Condition Damage': 36, 'Healing Power': 36}
     armory-embed: 'items'
     armory-id: 76166
 
-  Superior Rune of the Undead:
+  undead:
+    text: 'Superior Rune of the Undead'
     modifiers:
       flat: {'Condition Damage': 175, 'Toughness': 225}
       convert: {'Condition Damage': {'Toughness': 0.07}}
     armory-embed: 'items'
     armory-id: 24757
 
-  Superior Rune of the Necromancer:
+  necromancer:
+    text: 'Superior Rune of the Necromancer'
     modifiers:
       flat: {'Condition Damage': 300, 'Vitality': 100, 'Fear Duration': 20}
     armory-embed: 'items'
     armory-id: 24806
 
-  Superior Rune of the Nightmare:
+  nightmare:
+    text: 'Superior Rune of the Nightmare'
     modifiers:
       flat: {'Condition Damage': 175, 'Condition Duration': 20, 'Fear Duration': 10}
     armory-embed: 'items'
     armory-id: 24848
 
-  Superior Rune of the Trapper:
+  trapper:
+    text: 'Superior Rune of the Trapper'
     modifiers:
       flat: {'Condition Damage': 175, 'Condition Duration': 15}
     armory-embed: 'items'
     armory-id: 67339
 
-  Superior Rune of Balthazar:
+  balthazar:
+    text: 'Superior Rune of Balthazar'
     modifiers:
       flat: {'Condition Damage': 175, 'Burning Duration': 50}
       multiplier: {'Effective Health': 0.1}
     armory-embed: 'items'
     armory-id: 24765
 
-  Superior Rune of the Krait:
+  krait:
+    text: 'Superior Rune of the Krait'
     modifiers:
       flat: {'Condition Damage': 175, 'Bleeding Duration': 50}
     armory-embed: 'items'
     armory-id: 24762
 
-  Superior Rune of the Afflicted:
+  afflicted:
+    text: 'Superior Rune of the Afflicted'
     modifiers:
       flat: {'Condition Damage': 175, 'Bleeding Duration': 20, 'Poison Duration': 10, 'Condition Duration': 10}
     armory-embed: 'items'
     armory-id: 24687
 
-  Superior Rune of Perplexity:
+  perplexity:
+    text: 'Superior Rune of Perplexity'
     modifiers:
       flat: {'Condition Damage': 175, 'Confusion Duration': 50}
     armory-embed: 'items'
     armory-id: 44957
 
-  Superior Rune of Tormenting:
+  tormenting:
+    text: 'Superior Rune of Tormenting'
     modifiers:
       flat: {'Condition Damage': 175, 'Torment Duration': 50}
     armory-embed: 'items'
     armory-id: 44956
 
-  Superior Rune of Thorns:
+  thorns:
+    text: 'Superior Rune of Thorns'
     modifiers:
       flat: {'Condition Damage': 300, 'Poison Duration': 50}
     armory-embed: 'items'
     armory-id: 72912
 
-  Superior Rune of the Elementalist:
+  elementalist:
+    text: 'Superior Rune of the Elementalist'
     modifiers:
       flat: {'Power': 175, 'Condition Damage': 225, 'Condition Duration': 10}
     armory-embed: 'items'
     armory-id: 24800
 
-  Superior Rune of the Soulbeast<br> <small class="text-muted font-italic">(Active Bonus)</small>:
+  soulbeast<br-<small-class="text-muted-font-italic">(active-bonus)</small>:
+    text: 'Superior Rune of the Soulbeast<br> <small class="text-muted font-italic">(Active Bonus)</small>'
     modifiers:
       flat: {'Condition Damage': 175, 'Power': 100}
       convert: {'Condition Damage': {'Power': 0.07}}
@@ -278,13 +320,15 @@
 
 - SECTION: 'Hybrid Runes'
 
-  Superior Rune of the Traveler:
+  traveler:
+    text: 'Superior Rune of the Traveler'
     modifiers:
       flat: {'Power': 36, 'Precision': 36, 'Toughness': 36, 'Vitality': 36, 'Ferocity': 36, 'Condition Damage': 36, 'Healing Power': 36, 'Concentration': 36, 'Expertise': 36, 'Boon Duration': 15, 'Condition Duration': 10}
     armory-embed: 'items'
     armory-id: 24691
 
-  Superior Rune of the Mad King:
+  mad-king:
+    text: 'Superior Rune of the Mad King'
     modifiers:
       flat: {'Condition Duration': 5, 'Power': 175, 'Bleeding Duration': 40}
     armory-embed: 'items'
